do not inject TaackUiConfiguration, add bootRun to test using less memory